src/objects/Revenue_Schedule__c.object
<CustomObject>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount__c</fullName>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Month__c</fullName>
        <label>Forecast Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>Revenue_Schedules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Revenue Schedule</label>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Revenue Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>